project button safari fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,7 @@
   gap: 10px;
   padding: 17.5px 18px;
   background-color: var(--bg-color, #fff);
+  margin-block-end: 103px;
 }
 
 .save-button svg {
@@ -276,6 +277,7 @@
     flex-direction: column;
     gap: 8px;
     padding: 15px 19px;
+    margin-block-end: 100px;
   }
   .save-button svg {
     width: 28px;
